# fast-api-ecommerce

./: .env  pyproject.toml
alembic/: env.py
alembic/versions/: dd1ce183be3a_initial_tables.py
app/: main.py
app/config/: app_config.py
app/database/: database.py
app/database/schemas/: __init__.py  cart.py  order.py  product.py  user.py
app/models/: __init__.py  cart.py  order.py  product.py  user.py
app/routers/: auth.py
app/utils/: auth.py  dependencies.py
